--- a/programa avanzada/nbproject/project.properties
+++ b/programa avanzada/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -27,15 +27,20 @@ dist.dir=dist
 dist.jar=${dist.dir}/programa_avanzada.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.postgresql-9.4.1211.jre6.jar=C:\\Users\\Facundo\\Dropbox\\TPs JAVA (Enriquez - Marquez)\\Librerias\\postgresql-9.4.1211.jre6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.eclipselink.classpath}:\
+    ${libs.Java_Persistence.classpath}:\
+    ${file.reference.postgresql-9.4.1211.jre6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
