--- a/programa avanzada/nbproject/project.properties
+++ b/programa avanzada/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.postgresql-9.4.1211.jre6.jar}:\
     ${file.reference.javax.transaction_1.1.1.v201105210645.jar}:\
     ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
-    ${file.reference.postgresql-9.4.1211.jre6.jar-1}
+    ${file.reference.postgresql-9.4.1211.jre6.jar-1}:\
+    ${libs.eclipselinkmodelgen.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Visual.MenuPrincipal
+main.class=Visual.ControladoraVisual
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
