--- a/programa avanzada/nbproject/project.properties
+++ b/programa avanzada/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/programa_avanzada.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\eras\\Dropbox\\TPs (Enriquez - Marquez)\\Librerias\\jcalendar-1.3.3.jar
 file.reference.postgresql-9.4.1211.jre6.jar-1=..\\..\\miLibreria\\postgresql-9.4.1211.jre6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.Java_Persistence.classpath}:\
-    ${file.reference.postgresql-9.4.1211.jre6.jar-1}
+    ${file.reference.postgresql-9.4.1211.jre6.jar-1}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Visual.ControladoraVisual
+main.class=Controladora.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
