--- a/programa avanzada/nbproject/project.properties
+++ b/programa avanzada/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=programa avanzada
+application.vendor=Facu
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,16 +28,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/programa_avanzada.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\eras\\Dropbox\\TPs (Enriquez - Marquez)\\Librerias\\jcalendar-1.3.3.jar
 file.reference.postgresql-9.4.1211.jre6.jar-1=..\\..\\miLibreria\\postgresql-9.4.1211.jre6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}:\
     ${libs.Java_Persistence.classpath}:\
     ${file.reference.postgresql-9.4.1211.jre6.jar-1}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${libs.EclipseLink__JPA_2.0_.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
