--- a/programa avanzada/nbproject/project.properties
+++ b/programa avanzada/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/programa_avanzada.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.4.1.jar=..\\..\\miLibreria\\itextpdf-5.4.1.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\eras\\Dropbox\\TPs (Enriquez - Marquez)\\Librerias\\jcalendar-1.3.3.jar
 file.reference.postgresql-9.4.1211.jre6.jar-1=..\\..\\miLibreria\\postgresql-9.4.1211.jre6.jar
 includes=**
@@ -38,7 +39,8 @@ javac.classpath=\
     ${libs.Java_Persistence.classpath}:\
     ${file.reference.postgresql-9.4.1211.jre6.jar-1}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.itextpdf-5.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
