--- a/programa avanzada/nbproject/project.properties
+++ b/programa avanzada/nbproject/project.properties
@@ -31,7 +31,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.4.1.jar=..\\..\\miLibreria\\itextpdf-5.4.1.jar
+file.reference.itextpdf-5.4.1.jar-1=..\\miLibreria\\itextpdf-5.4.1.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=..\\miLibreria\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\eras\\Dropbox\\TPs (Enriquez - Marquez)\\Librerias\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar-1=..\\miLibreria\\jcalendar-1.3.3.jar
+file.reference.postgresql-9.4.1211.jre6.jar=..\\miLibreria\\postgresql-9.4.1211.jre6.jar
 file.reference.postgresql-9.4.1211.jre6.jar-1=..\\..\\miLibreria\\postgresql-9.4.1211.jre6.jar
 includes=**
 jar.compress=false
@@ -40,7 +44,11 @@ javac.classpath=\
     ${file.reference.postgresql-9.4.1211.jre6.jar-1}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.itextpdf-5.4.1.jar}
+    ${file.reference.itextpdf-5.4.1.jar}:\
+    ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
+    ${file.reference.postgresql-9.4.1211.jre6.jar}:\
+    ${file.reference.itextpdf-5.4.1.jar-1}:\
+    ${file.reference.jcalendar-1.3.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
